--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,18 +2,18 @@
 #not found
 message.exception.not-found.organization=Organization not found
 message.exception.not-found.user=User not found
-
+message.exception.not-found.client=Client not found
+message.exception.not-found.project=Project not found
 #internal
 message.exception.internal.message.send=Send message failure {0}
 #bad-request
 message.exception.bad-request.converter=Audio converter exception
 #conflict
+message.exception.conflict.project.title=Project with title {0} already exist for this organization
 message.exception.conflict.organization.title=Organization with name {0} already exist
-message.exception.conflict.organization.inn=Organization with name {0} already exist
-message.exception.conflict.user=Email {0} already use
-
-
-
+message.exception.conflict.organization.inn=Organization with inn {0} already exist
+message.exception.conflict.user=User with email {0} already exist
+message.exception.conflict.client.phone=Client with phone {0} already exist for with user
 #payment
 message.exception.payment-required.limit=Limit exceeded. Available limit {0}. Current sum {1}
 #for handle exception
