--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ message.exception.not-found.organization=Organization not found
 message.exception.not-found.user=User not found
 message.exception.not-found.client=Client not found
 message.exception.not-found.project=Project not found
+message.exception.not-found.estimate=Estimate not found
+message.exception.not-found.estimate-item=Estimate item not found
 #internal
 message.exception.internal.message.send=Send message failure {0}
 #bad-request
@@ -14,6 +16,7 @@ message.exception.conflict.organization.title=Organization with name {0} already
 message.exception.conflict.organization.inn=Organization with inn {0} already exist
 message.exception.conflict.user=User with email {0} already exist
 message.exception.conflict.client.phone=Client with phone {0} already exist for with user
+message.exception.conflict.estimate.project=Estimate for project {0} already exists
 #payment
 message.exception.payment-required.limit=Limit exceeded. Available limit {0}. Current sum {1}
 #for handle exception
