--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,5 +1,7 @@
 #exceptions
 message.exception.not-found.user=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D
+message.exception.not-found.estimate=\u0421\u043C\u0435\u0442\u0430 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u0430
+message.exception.not-found.estimate-item=\u041F\u043E\u0437\u0438\u0446\u0438\u044F \u0441\u043C\u0435\u0442\u044B \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u0430
 #internal
 #bad-request
 #conflict
@@ -13,3 +15,4 @@ message.exception.bad-credentials=\u041D\u0435\u0432\u0435\u0440\u043D\u044B\u04
 message.exception.http-request-method-not-supported=\u041C\u0435\u0442\u043E\u0434 \u0437\u0430\u043F\u0440\u043E\u0441\u0430 "{0}" \u043D\u0435 \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0435\u0442\u0441\u044F
 message.exception.locked=\u0423\u0447\u0435\u0442\u043D\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0437\u0430\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u043D\u0430
 message.exception.http-message-not-readable=\u041E\u0448\u0438\u0431\u043A\u0430 \u0432 \u0444\u043E\u0440\u043C\u0430\u0442\u0435 \u0437\u0430\u043F\u0440\u043E\u0441\u0430
+message.exception.conflict.estimate.project=\u0421\u043C\u0435\u0442\u0430 \u0434\u043B\u044F \u043F\u0440\u043E\u0435\u043A\u0442\u0430 {0} \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
