--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,8 @@ message.exception.not-found.client=Client not found
 message.exception.not-found.project=Project not found
 message.exception.not-found.estimate=Estimate not found
 message.exception.not-found.estimate-item=Estimate item not found
+message.exception.not-found.works=Works not found
+message.exception.not-found.estimate-catalog-item=Estimate catalog item not found
 #internal
 message.exception.internal.message.send=Send message failure {0}
 #bad-request
