--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -2,6 +2,8 @@
 message.exception.not-found.user=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D
 message.exception.not-found.estimate=\u0421\u043C\u0435\u0442\u0430 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u0430
 message.exception.not-found.estimate-item=\u041F\u043E\u0437\u0438\u0446\u0438\u044F \u0441\u043C\u0435\u0442\u044B \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u0430
+message.exception.not-found.works=\u0420\u0430\u0431\u043E\u0442\u0430 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u0430
+message.exception.not-found.estimate-catalog-item=\u041A\u0430\u0442\u0430\u043B\u043E\u0436\u043D\u0430\u044F \u043F\u043E\u0437\u0438\u0446\u0438\u044F \u0441\u043C\u0435\u0442\u044B \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u0430
 #internal
 #bad-request
 #conflict
