--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,9 @@ message.exception.conflict.organization.inn=Organization with inn {0} already ex
 message.exception.conflict.user=User with email {0} already exist
 message.exception.conflict.client.phone=Client with phone {0} already exist for with user
 message.exception.conflict.estimate.project=Estimate for project {0} already exists
+message.exception.conflict.work-line.overplanned=Requested quantity exceeds available. Available: {0}
+message.exception.conflict.work-line.non-positive=Planned quantity must be positive
+message.exception.conflict.work-line.actual-gt-planned=Actual quantity cannot exceed planned
 #payment
 message.exception.payment-required.limit=Limit exceeded. Available limit {0}. Current sum {1}
 #for handle exception
